Checkpoint commit as of 2018-10-05-12-26-26.

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
       "Qck\\Expression\\": "src"
     },
     "files": [
-      "src/autoload.php"
+      "src/quickexpression_autoload.php"
     ]
   },
   "minimum-stability": "dev",
